@@ -17,16 +17,10 @@ local CLOSE = CLOSE
 
 local ChangeLogData = {
 	"Changes:",
-		"• Add an ObjectiveTracker collapse function on Raid Bosses.",
-		"• Fix Chat Button, it will now get the actual size from the chat height.",
-		"• Update many skins.",
-		"• Update BigWigs and Details profiles.",
-		"• Create a mover for the SpecBar.",
-		"• Add an own MicroBar with right click functionality from the LocPanel.",
-		"• Update the skinning function for buttons to be transparent. Thx Simpy <3",
-		"• Readd the custom MiniMap textures.",
-		"• Update the AFK Frame. =)",
-		"• Layout Update.",
+		"• Changed the middle Datatext framestrata.",
+		"• Add an option to disable the Infotexts style.",
+		"• Show the option to disable my AFK Screen.",
+		"• Correctly disable the Orderhall Commandbar, if the skin is disabled.",
 		-- "• ",
 	" ",
 	"Notes:",
