@@ -1,3 +1,9 @@
+[b][color=orange]v3.18[/color], 26.01.2018[/b][list]
+[*]Changed the middle Datatext framestrata.
+[*]Add an option to disable the Infotexts style.
+[*]Show the option to disable my AFK Screen.
+[*]Correctly disable the Orderhall Commandbar, if the skin is disabled.[/list]
+
 [b][color=orange]v3.17[/color], 23.01.2018[/b][list]
 [*]Add an ObjectiveTracker collapse function on Raid Bosses.
 [*]Fix Chat Button, it will now get the actual size from the chat height.
